	* lib-check.m4: Add copyright notice.
	(cu_LIB_CHECK): Renamed from gl_LIB_CHECK.
	Don't check for sqrt; factor no longer needs it.
	Revamp tests for floor, modf, rint, to define SEQ_LIBM.
	Redo tests for fesetround to act like the other wons.
	Use "cu_saved_libs" for local var name, not "ac_su_saved_lib".
	* prereq.m4: Add copyright notice.
	(gl_PREREQ): Add gl_LOCALCHARSET.

2005-05-16  Jim Meyering  <jim@meyering.net>

	* fts.m4 (gl_FUNC_FTS): Don't require AC_FUNC_MALLOC or
	AC_FUNC_REALLOC.  They are not needed.

2005-05-14  Jim Meyering  <jim@meyering.net>

	* unlinkdir.m4: Register unlinkdir.c and unlinkdir.h via AC_LIBSOURCES.
	Add `AC_LIBOBJ([unlinkdir])'.

2005-05-14  Paul Eggert  <eggert@cs.ucla.edu>

	* prereqs.m4 (gl_PREREQ): Require gl_UNLINKDIR.
	* unlinkdir.m4: New file.

2005-05-13  Jim Meyering  <jim@meyering.net>

	* prereq.m4: Don't require gl_FUNC_STAT or gl_FUNC_LSTAT.
	* stat.m4: Remove unnecessary file.
	* lstat.m4: Remove unnecessary file.

	* readdir.m4 (GL_FUNC_READDIR): Remove, now that remove.c no
	longer needs it.
	* jm-macros.m4 (gl_MACROS): Don't require GL_FUNC_READDIR.

2005-05-10  Derek Price  <derek@ximbiot.com>

	* getopt.m4 (gl_GETOPT): Check for Solaris 10 bug, not decl, when
	possible.

2005-05-05  Paul Eggert  <eggert@cs.ucla.edu>

	* getopt.m4 (gl_GETOPT): Check for Solaris 10 getopt, and avoid
	needless checks.

2005-05-01  Paul Eggert  <eggert@cs.ucla.edu>

	* getpass.m4, gettext.m4: Sync from gnulib.

2005-04-28  Paul Eggert  <eggert@cs.ucla.edu>

	* euidaccess.m4 (gl_PREREQ_EUIDACCESS): Don't require AC_HEADER_STAT.
	* jm-macros.m4 (gl_CHECK_ALL_TYPES): Likewise.
	* lchown.m4 (gl_FUNC_CHOWN): Likewise.
	(gl_PREREQ_CHOWN): Remove.
	* lstat.m4 (gl_FUNC_LSTAT): Require AC_FUNC_LSTAT instead of calling
	it.  Don't require AC_HEADER_STAT.
	(gl_PREREQ_LSTAT): Remove.
	* mkstemp.m4 (gl_PREREQ_TEMPNAME): Check stdint.h only once.
	Don't require AC_HEADER_STAT.
	* prereq.m4 (gl_PREREQ): Require gl_STAT_MACROS.